Fix dropdown overflow

--- a/RShinyApp/EverestInsights/www/style.css
+++ b/RShinyApp/EverestInsights/www/style.css
@@ -36,7 +36,7 @@ h2 {
   color: rgba(0,0,0,.87);
   margin: 8px 0;
   padding: 15px;
-  overflow: hidden;
+  overflow: visible;
   position: relative;
 }
 
